<resources>
    <string name="app_name">Notes App</string>
    <string name="application_heading">Notes</string>
    <string name="add_note_button">Add note</string>
    <string name="empty_element">Empty Element</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="enter_note">Enter your note here</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="no_content">No content</string>
    <string name="save">Save</string>
</resources>