<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/detailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="gone"
        android:onClick="onSaveUpdate"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_View_Data"
        android:layout_width="match_parent"
        android:layout_height="480dp">

        <EditText
            android:id="@+id/noteDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/no_content"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:onClick="onDelete"/>

</LinearLayout>